# rnacentral-backend

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
backend/: config.py  database.py  main.py  models.py  schemas.py  settings.py  test_performance.py
backend/backend/: local_settings_example.py  settings.py  urls.py
backend/blog/: models.py  serializers.py  views.py
backend/sequence/: admin.py
backend/sequence/api/: serializers.py  viewsets.py
backend/sequence/api/accession/: serializers.py  viewsets.py
backend/sequence/api/database/: serializers.py  viewsets.py
backend/sequence/api/ensembl_assembly/: serializers.py
backend/sequence/api/ensembl_compara/: serializers.py  viewsets.py
backend/sequence/api/go_terms/: serializers.py  viewsets.py
backend/sequence/api/interaction/: serializers.py  viewsets.py
backend/sequence/api/qc_status/: serializers.py  (+1 more)
backend/sequence/models/: __init__.py  accession.py  database.py  ensembl_assembly.py  ensembl_compara.py  go_terms.py  interactions.py  protein_info.py  qc_status.py  related_sequences.py  release.py  rfam.py  rna.py  rna_precomputed.py  sequence_feature.py  sequence_regions.py  taxonomy.py  xref.py
backend/sequence/tests/: __init__.py  accession.py  base.py  database.py  ensembl_assembly.py  ensembl_compara.py  go_terms.py  interaction.py  qc_status.py  rfam.py  rna.py  secondary_structure.py  sequence_features.py  sequence_region.py  xref.py
backend/sequence/utils/: helper_functions.py
(+15 files in other folders)
