[tool.poetry]
name = "rnacentral-backend"
version = "0.1.0"
description = ""
authors = ["RNAcentral <rnacentral@gmail.com>"]
readme = "README.md"
packages = [{include = "rnacentral_backend"}]

# usage: poetry add psycopg2-binary --source test-pypi
[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2-binary = {version = "^2.9.3", source = "test-pypi"}
django-cors-headers = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
