[tool.poetry]
name = "rnacentral-backend"
version = "0.1.0"
description = ""
authors = ["RNAcentral <rnacentral@gmail.com>"]
readme = "README.md"
packages = [{include = "rnacentral_backend"}]

# usage: poetry add psycopg2-binary --source test-pypi
[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.1.10"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.7"
django-cors-headers = "^3.14.0"
django-filter = "^22.1"
boto3 = "^1.28.29"
colorhash = "^1.2.1"
drf-spectacular = "^0.26.5"
pyyaml = "^6.0.1"
django-tinymce = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
